--- a/reports/testExecutionReport.html
+++ b/reports/testExecutionReport.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2019-04-01 10:37:52</span>
+					<span class='suite-started-time'>2019-04-02 10:41:28</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 7s+624ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 7s+634ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 7s+624ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 7s+634ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2019-04-01 10:37:45</span> 
+							<span class='panel-lead suite-started-time'>2019-04-02 10:41:20</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2019-04-01 10:37:52</span> 
+							<span class='panel-lead suite-ended-time'>2019-04-02 10:41:28</span> 
 						</div> 
 					</div>
 				</div>
@@ -237,7 +237,7 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='976bd1d2-23b9-4255-8f8a-64d0bd0923d3'>
+										<li class='collection-item test displayed active pass ' extentid='cf304f7e-3ad2-4384-8a6c-3a52403c4a81'>
 											<div class='test-head'>
 												<span class='test-name'>Adding a New Tax Return </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -245,9 +245,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-04-01 10:37:45</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-04-01 10:37:52</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 7s+219ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-04-02 10:41:20</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-04-02 10:41:27</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 7s+209ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -264,8 +264,18 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>10:37:46</td>
+																	<td class='timestamp'>10:41:21</td>
 																	<td class='step-details'>Browser Maximized</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>10:41:26</td>
+																	<td class='step-details'>Clicked Offices</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>10:41:27</td>
+																	<td class='step-details'>New Tax Return created</td>
 																</tr>
 														</tbody>
 													</table>
