--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,10 +31,47 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0.0 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">0</td><td class="numi">0.0 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
+<tr><th colspan="4">Default test &#8212; failed (configuration methods)</th></tr>
+<tr class="failedodd"><td rowspan="1">clo.AddaNewReturn</td><td><a href="#m1"><b>login</b>  </a></td><td class="numi">1</td><td>1554227046001</td><td class="numi">0</td></tr>
+<tr><th colspan="4">Default test &#8212; skipped (configuration methods)</th></tr>
+<tr class="skippedodd"><td rowspan="1">clo.AddaNewReturn</td><td><a href="#m2"><b>teardown</b>  </a></td><td class="numi">1</td><td>1554227046034</td><td class="numi">0</td></tr>
+<tr><th colspan="4">Default test &#8212; skipped</th></tr>
+<tr class="skippedodd"><td rowspan="1">clo.AddaNewReturn</td><td><a href="#m3"><b>addareturn</b>  </a></td><td class="numi">1</td><td>1554227046019</td><td class="numi">15</td></tr>
 </table>
 <h1>Default test</h1>
+<h2 id="m1">clo.AddaNewReturn:login</h2>
+<div style="padding-left:3em">
+<p>
+Parameter &apos;env&apos; is required by @Configuration on method login but has not been marked @Optional or defined
+in C:\Users\ssreenivasan\AppData\Local\Temp\2\testng-eclipse-301202795\testng-customsuite.xml</p>
+org.testng.internal.Parameters.createParameters(Parameters.java:155)
+<br/>at org.testng.internal.Parameters.createParameters(Parameters.java:355)
+<br/>at org.testng.internal.Parameters.createConfigurationParameters(Parameters.java:86)
+<br/>at org.testng.internal.Invoker.invokeConfigurations(Invoker.java:199)
+<br/>at org.testng.internal.Invoker.invokeConfigurations(Invoker.java:138)
+<br/>at org.testng.TestRunner.beforeRun(TestRunner.java:641)
+<br/>at org.testng.TestRunner.run(TestRunner.java:609)
+<br/>at org.testng.SuiteRunner.runTest(SuiteRunner.java:334)
+<br/>at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:329)
+<br/>at org.testng.SuiteRunner.privateRun(SuiteRunner.java:291)
+<br/>at org.testng.SuiteRunner.run(SuiteRunner.java:240)
+<br/>at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
+<br/>at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)
+<br/>at org.testng.TestNG.runSuitesSequentially(TestNG.java:1198)
+<br/>at org.testng.TestNG.runSuitesLocally(TestNG.java:1123)
+<br/>at org.testng.TestNG.run(TestNG.java:1031)
+<br/>at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:114)
+<br/>at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+<br/>at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+<br/>1 lines not shown
+</div>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m2">clo.AddaNewReturn:teardown</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m3">clo.AddaNewReturn:addareturn</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
