all testcase changes

--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="efea79">  <td>19/04/02 10:44:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddaNewReturn.addareturn()[pri:0, instance:clo.AddaNewReturn@7c7b252e]">addareturn</td> 
-  <td>main@1010953501</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/04/09 09:56:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.forgotPassword()[pri:0, instance:clo.LoginPage@20322d26]">forgotPassword</td> 
+  <td>main@503195940</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/04/09 09:57:04</td>   <td>17453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginPositive()[pri:0, instance:clo.LoginPage@20322d26]">loginPositive</td> 
+  <td>main@503195940</td>   <td></td> </tr>
 </table>
