--- a/test-output/old/Suite2/methods-alphabetical.html
+++ b/test-output/old/Suite2/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite2</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7fa893">  <td>19/04/08 10:56:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginNegative()[pri:0, instance:clo.LoginPage@3159c4b8]">loginNegative</td> 
-  <td>main@1549409129</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/04/08 11:15:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginNegative()[pri:0, instance:clo.LoginPage@20322d26]">loginNegative</td> 
+  <td>main@503195940</td>   <td></td> </tr>
 </table>
