--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,63 +8,68 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<<<<<<< HEAD
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">8</td><td class="num">0</td><td class="num">0</td><td class="num">49,135</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">13</td><td class="num">0</td><td class="num attn">1</td><td class="num">82,108</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="8">clo.LoginPage</td><td><a href="#m0">createApptSameTime</a></td><td rowspan="1">1557174796268</td><td rowspan="1">8291</td></tr><tr class="passedeven"><td><a href="#m1">createNewAppointment</a></td><td rowspan="1">1557174787799</td><td rowspan="1">8469</td></tr><tr class="passedeven"><td><a href="#m2">deleteAppointment</a></td><td rowspan="1">1557174810795</td><td rowspan="1">1179</td></tr><tr class="passedeven"><td><a href="#m3">deleteMessage</a></td><td rowspan="1">1557174820433</td><td rowspan="1">2277</td></tr><tr class="passedeven"><td><a href="#m4">loginPositive</a></td><td rowspan="1">1557174773598</td><td rowspan="1">14198</td></tr><tr class="passedeven"><td><a href="#m5">newMessageReply</a></td><td rowspan="1">1557174816540</td><td rowspan="1">3891</td></tr><tr class="passedeven"><td><a href="#m6">newMessageSent</a></td><td rowspan="1">1557174811975</td><td rowspan="1">4564</td></tr><tr class="passedeven"><td><a href="#m7">updateAppointment</a></td><td rowspan="1">1557174804560</td><td rowspan="1">6235</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">clo.LoginPage</td><td><a href="#m0">deleteSecondAppointment</a></td><td rowspan="1">1557952058748</td><td rowspan="1">58</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="13">clo.LoginPage</td><td><a href="#m1">checksReadyToPrint</a></td><td rowspan="1">1557952069495</td><td rowspan="1">4782</td></tr><tr class="passedeven"><td><a href="#m2">checksRegister</a></td><td rowspan="1">1557952074278</td><td rowspan="1">5616</td></tr><tr class="passedeven"><td><a href="#m3">createApptSameTime</a></td><td rowspan="1">1557952042938</td><td rowspan="1">8439</td></tr><tr class="passedeven"><td><a href="#m4">createNewAppointment</a></td><td rowspan="1">1557952034857</td><td rowspan="1">8080</td></tr><tr class="passedeven"><td><a href="#m5">deleteAppointment</a></td><td rowspan="1">1557952057572</td><td rowspan="1">1174</td></tr><tr class="passedeven"><td><a href="#m6">deleteMessage</a></td><td rowspan="1">1557952067205</td><td rowspan="1">2289</td></tr><tr class="passedeven"><td><a href="#m7">forgotPassword</a></td><td rowspan="1">1557952011894</td><td rowspan="1">10591</td></tr><tr class="passedeven"><td><a href="#m8">loginNegative</a></td><td rowspan="1">1557951999589</td><td rowspan="1">12302</td></tr><tr class="passedeven"><td><a href="#m9">loginPositive</a></td><td rowspan="1">1557952022486</td><td rowspan="1">12370</td></tr><tr class="passedeven"><td><a href="#m10">newMessageReply</a></td><td rowspan="1">1557952063384</td><td rowspan="1">3820</td></tr><tr class="passedeven"><td><a href="#m11">newMessageSent</a></td><td rowspan="1">1557952058812</td><td rowspan="1">4571</td></tr><tr class="passedeven"><td><a href="#m12">updateAppointment</a></td><td rowspan="1">1557952051378</td><td rowspan="1">6193</td></tr><tr class="passedeven"><td><a href="#m13">voidCheck</a></td><td rowspan="1">1557952079895</td><td rowspan="1">1770</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">clo.LoginPage#createApptSameTime</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">clo.LoginPage#createNewAppointment</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">clo.LoginPage#deleteAppointment</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">clo.LoginPage#deleteMessage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">clo.LoginPage#loginPositive</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">clo.LoginPage#newMessageReply</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">clo.LoginPage#newMessageSent</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">clo.LoginPage#updateAppointment</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-=======
-<tr><th colspan="7">Suite1</th></tr>
-<tr><td><a href="#t0">testinqa</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">15,325</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">testindev</a></td><td class="num">0</td><td class="num attn">1</td><td class="num">0</td><td class="num">8,813</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">1</th><th class="num attn">1</th><th class="num">0</th><th class="num">24,138</th><th colspan="2"></th></tr>
-</table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite1</th></tr></tbody><tbody id="t0"><tr><th colspan="4">testinqa &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">clo.AddaNewReturn</td><td><a href="#m0">addareturn</a></td><td rowspan="1">1554830031206</td><td rowspan="1">1082</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">testindev &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">clo.AddaNewReturn</td><td><a href="#m1">login</a></td><td rowspan="1">1554830035028</td><td rowspan="1">8778</td></tr><tr><th colspan="4">testindev &#8212; skipped (configuration methods)</th></tr><tr class="skippedeven"><td rowspan="1">clo.AddaNewReturn</td><td><a href="#m2">teardown</a></td><td rowspan="1">1554830043838</td><td rowspan="1">0</td></tr><tr><th colspan="4">testindev &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">clo.AddaNewReturn</td><td><a href="#m3">addareturn</a></td><td rowspan="1">1554830043831</td><td rowspan="1">0</td></tr></tbody>
-</table>
-<h2>testinqa</h2><h3 id="m0">clo.AddaNewReturn#addareturn</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>testindev</h2><h3 id="m1">clo.AddaNewReturn#login</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>dev</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.WebDriverException: unknown error: Element &lt;button class=&quot;jss408 jss382 jss384 jss387&quot; tabindex=&quot;0&quot; type=&quot;button&quot; id=&quot;btnStartTour&quot; style=&quot;width: 10vw; min-height: 3.5vh; text-transform: capitalize; font-family: Roboto; font-size: 14px; border-radius: 4px; margin-right: 1.5vw; padding: 0px;&quot;&gt;...&lt;/button&gt; is not clickable at point (646, 492). Other element would receive the click: &lt;form style=&quot;margin-left: 3vw; margin-right: 3vw; margin-top: 1vh;&quot;&gt;...&lt;/form&gt;
-  (Session info: chrome=73.0.3683.86)
-  (Driver info: chromedriver=2.39.562718 (9a2698cba08cf5a471a29d30c8b3e12becabb0e9),platform=Windows NT 6.2.9200 x86_64) (WARNING: The server did not provide any stacktrace information)
-Command duration or timeout: 212 milliseconds
+<h2>Default test</h2><h3 id="m0">clo.LoginPage#deleteSecondAppointment</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.WebDriverException: unknown error: Element &lt;span class=&quot;jss450&quot;&gt;...&lt;/span&gt; is not clickable at point (529, 313). Other element would receive the click: &lt;div class=&quot;jss698&quot; aria-hidden=&quot;true&quot; style=&quot;opacity: 1; will-change: opacity; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;&quot;&gt;&lt;/div&gt;
+  (Session info: chrome=74.0.3729.131)
+  (Driver info: chromedriver=2.39.562718 (9a2698cba08cf5a471a29d30c8b3e12becabb0e9),platform=Windows NT 10.0.17134 x86_64) (WARNING: The server did not provide any stacktrace information)
+Command duration or timeout: 43 milliseconds
 Build info: version: &apos;2.53.0&apos;, revision: &apos;35ae25b1534ae328c771e0856c93e187490ca824&apos;, time: &apos;2016-03-15 10:43:46&apos;
-System info: host: &apos;qaint&apos;, ip: &apos;89.0.1.156&apos;, os.name: &apos;Windows Server 2012&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;6.2&apos;, java.version: &apos;1.8.0_171&apos;
+System info: host: &apos;coyote&apos;, ip: &apos;10.1.1.72&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;1.8.0_181&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Capabilities [{applicationCacheEnabled=false, rotatable=false, mobileEmulationEnabled=false, networkConnectionEnabled=false, chrome={chromedriverVersion=2.39.562718 (9a2698cba08cf5a471a29d30c8b3e12becabb0e9), userDataDir=C:\Users\SSREEN~1\AppData\Local\Temp\2\scoped_dir11324_21635}, takesHeapSnapshot=true, pageLoadStrategy=normal, databaseEnabled=false, handlesAlerts=true, hasTouchScreen=false, version=73.0.3683.86, platform=WIN8, browserConnectionEnabled=false, nativeEvents=true, acceptSslCerts=false, acceptInsecureCerts=false, locationContextEnabled=true, webStorageEnabled=true, browserName=chrome, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true, setWindowRect=true, unexpectedAlertBehaviour=}]
-Session ID: a40f21fc70328ee1cf74cf1c934e251b
+Capabilities [{applicationCacheEnabled=false, rotatable=false, mobileEmulationEnabled=false, networkConnectionEnabled=false, chrome={chromedriverVersion=2.39.562718 (9a2698cba08cf5a471a29d30c8b3e12becabb0e9), userDataDir=C:\Users\nmenon\AppData\Local\Temp\scoped_dir60436_10997}, takesHeapSnapshot=true, pageLoadStrategy=normal, databaseEnabled=false, handlesAlerts=true, hasTouchScreen=false, version=74.0.3729.131, platform=XP, browserConnectionEnabled=false, nativeEvents=true, acceptSslCerts=false, acceptInsecureCerts=false, locationContextEnabled=true, webStorageEnabled=true, browserName=chrome, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true, setWindowRect=true, unexpectedAlertBehaviour=}]
+Session ID: 4cc5c095e5b12636bcc63cf6b37952a6
+	at sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
+	at sun.reflect.NativeConstructorAccessorImpl.newInstance(Unknown Source)
+	at sun.reflect.DelegatingConstructorAccessorImpl.newInstance(Unknown Source)
+	at java.lang.reflect.Constructor.newInstance(Unknown Source)
 	at org.openqa.selenium.remote.ErrorHandler.createThrowable(ErrorHandler.java:206)
 	at org.openqa.selenium.remote.ErrorHandler.throwIfResponseFailed(ErrorHandler.java:158)
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:678)
 	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:327)
 	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:85)
-	at clo.AddaNewReturn.login(AddaNewReturn.java:200)
-... Removed 28 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">clo.AddaNewReturn#teardown</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">clo.AddaNewReturn#addareturn</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.WebDriverException: unknown error: Element &lt;button class=&quot;jss408 jss382 jss384 jss387&quot; tabindex=&quot;0&quot; type=&quot;button&quot; id=&quot;btnStartTour&quot; style=&quot;width: 10vw; min-height: 3.5vh; text-transform: capitalize; font-family: Roboto; font-size: 14px; border-radius: 4px; margin-right: 1.5vw; padding: 0px;&quot;&gt;...&lt;/button&gt; is not clickable at point (646, 492). Other element would receive the click: &lt;form style=&quot;margin-left: 3vw; margin-right: 3vw; margin-top: 1vh;&quot;&gt;...&lt;/form&gt;
-  (Session info: chrome=73.0.3683.86)
-  (Driver info: chromedriver=2.39.562718 (9a2698cba08cf5a471a29d30c8b3e12becabb0e9),platform=Windows NT 6.2.9200 x86_64) (WARNING: The server did not provide any stacktrace information)
-Command duration or timeout: 212 milliseconds
-Build info: version: &apos;2.53.0&apos;, revision: &apos;35ae25b1534ae328c771e0856c93e187490ca824&apos;, time: &apos;2016-03-15 10:43:46&apos;
-System info: host: &apos;qaint&apos;, ip: &apos;89.0.1.156&apos;, os.name: &apos;Windows Server 2012&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;6.2&apos;, java.version: &apos;1.8.0_171&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Capabilities [{applicationCacheEnabled=false, rotatable=false, mobileEmulationEnabled=false, networkConnectionEnabled=false, chrome={chromedriverVersion=2.39.562718 (9a2698cba08cf5a471a29d30c8b3e12becabb0e9), userDataDir=C:\Users\SSREEN~1\AppData\Local\Temp\2\scoped_dir11324_21635}, takesHeapSnapshot=true, pageLoadStrategy=normal, databaseEnabled=false, handlesAlerts=true, hasTouchScreen=false, version=73.0.3683.86, platform=WIN8, browserConnectionEnabled=false, nativeEvents=true, acceptSslCerts=false, acceptInsecureCerts=false, locationContextEnabled=true, webStorageEnabled=true, browserName=chrome, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true, setWindowRect=true, unexpectedAlertBehaviour=}]
-Session ID: a40f21fc70328ee1cf74cf1c934e251b
-	at org.openqa.selenium.remote.ErrorHandler.createThrowable(ErrorHandler.java:206)
-	at org.openqa.selenium.remote.ErrorHandler.throwIfResponseFailed(ErrorHandler.java:158)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:678)
-	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:327)
-	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:85)
-	at clo.AddaNewReturn.login(AddaNewReturn.java:200)
-... Removed 28 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
->>>>>>> 858cbda532beba182f353a51fc22382ced550cfd
+	at clo.LoginPage.deleteSecondAppointment(LoginPage.java:210)
+	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
+	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
+	at java.lang.reflect.Method.invoke(Unknown Source)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)
+	at org.testng.internal.Invoker.invokeMethod(Invoker.java:583)
+	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:719)
+	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:989)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:125)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
+	at org.testng.TestRunner.privateRun(TestRunner.java:648)
+	at org.testng.TestRunner.run(TestRunner.java:505)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:455)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:450)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:415)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:364)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:84)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1208)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1137)
+	at org.testng.TestNG.runSuites(TestNG.java:1049)
+	at org.testng.TestNG.run(TestNG.java:1017)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">clo.LoginPage#checksReadyToPrint</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">clo.LoginPage#checksRegister</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">clo.LoginPage#createApptSameTime</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">clo.LoginPage#createNewAppointment</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">clo.LoginPage#deleteAppointment</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">clo.LoginPage#deleteMessage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">clo.LoginPage#forgotPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">clo.LoginPage#loginNegative</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">clo.LoginPage#loginPositive</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m10">clo.LoginPage#newMessageReply</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m11">clo.LoginPage#newMessageSent</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m12">clo.LoginPage#updateAppointment</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m13">clo.LoginPage#voidCheck</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
