--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd7b6a">  <td>19/05/06 13:33:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createApptSameTime()[pri:5, instance:clo.LoginPage@192b07fd]">createApptSameTime</td> 
+<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.checksReadyToPrint()[pri:11, instance:clo.LoginPage@192b07fd]">checksReadyToPrint</td> 
   <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/06 13:33:07</td>   <td>-8469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createNewAppointment()[pri:4, instance:clo.LoginPage@192b07fd]">createNewAppointment</td> 
+<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:54</td>   <td>4783</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.checksRegister()[pri:12, instance:clo.LoginPage@192b07fd]">checksRegister</td> 
   <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/06 13:33:30</td>   <td>14527</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteAppointment()[pri:7, instance:clo.LoginPage@192b07fd]">deleteAppointment</td> 
+<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:22</td>   <td>-26557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createApptSameTime()[pri:5, instance:clo.LoginPage@192b07fd]">createApptSameTime</td> 
   <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/06 13:33:40</td>   <td>24165</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteMessage()[pri:10, instance:clo.LoginPage@192b07fd]">deleteMessage</td> 
+<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:14</td>   <td>-34638</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createNewAppointment()[pri:4, instance:clo.LoginPage@192b07fd]">createNewAppointment</td> 
   <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/06 13:32:53</td>   <td>-22671</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginPositive()[pri:3, instance:clo.LoginPage@192b07fd]">loginPositive</td> 
+<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:37</td>   <td>-11923</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteAppointment()[pri:7, instance:clo.LoginPage@192b07fd]">deleteAppointment</td> 
   <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/06 13:33:36</td>   <td>20272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageReply()[pri:9, instance:clo.LoginPage@192b07fd]">newMessageReply</td> 
+<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:47</td>   <td>-2290</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteMessage()[pri:10, instance:clo.LoginPage@192b07fd]">deleteMessage</td> 
   <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/06 13:33:31</td>   <td>15707</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageSent()[pri:8, instance:clo.LoginPage@192b07fd]">newMessageSent</td> 
+<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:38</td>   <td>-10747</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteSecondAppointment()[pri:7, instance:clo.LoginPage@192b07fd]">deleteSecondAppointment</td> 
   <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/06 13:33:24</td>   <td>8292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.updateAppointment()[pri:6, instance:clo.LoginPage@192b07fd]">updateAppointment</td> 
+<tr bgcolor="bd7b6a">  <td>19/05/15 13:26:51</td>   <td>-57601</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.forgotPassword()[pri:2, instance:clo.LoginPage@192b07fd]">forgotPassword</td> 
+  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/05/15 13:26:39</td>   <td>-69906</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginNegative()[pri:1, instance:clo.LoginPage@192b07fd]">loginNegative</td> 
+  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:02</td>   <td>-47009</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginPositive()[pri:3, instance:clo.LoginPage@192b07fd]">loginPositive</td> 
+  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:43</td>   <td>-6111</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageReply()[pri:9, instance:clo.LoginPage@192b07fd]">newMessageReply</td> 
+  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:38</td>   <td>-10683</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageSent()[pri:8, instance:clo.LoginPage@192b07fd]">newMessageSent</td> 
+  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:31</td>   <td>-18117</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.updateAppointment()[pri:6, instance:clo.LoginPage@192b07fd]">updateAppointment</td> 
+  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:59</td>   <td>10400</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.voidCheck()[pri:13, instance:clo.LoginPage@192b07fd]">voidCheck</td> 
   <td>main@846238611</td>   <td></td> </tr>
 </table>
