--- a/test-output/old/Suite2/methods.html
+++ b/test-output/old/Suite2/methods.html
@@ -1,6 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite2</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd7b6a">  <td>19/04/08 11:15:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginNegative()[pri:0, instance:clo.LoginPage@20322d26]">loginNegative</td> 
-  <td>main@503195940</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/05/14 09:50:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginNegative()[pri:1, instance:clo.LoginPage@192b07fd]">loginNegative</td> 
+  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/05/14 09:50:31</td>   <td>9894</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.forgotPassword()[pri:2, instance:clo.LoginPage@192b07fd]">forgotPassword</td> 
+  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/05/14 09:50:40</td>   <td>19486</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginPositive()[pri:3, instance:clo.LoginPage@192b07fd]">loginPositive</td> 
+  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/05/14 09:50:54</td>   <td>32642</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createNewAppointment()[pri:4, instance:clo.LoginPage@192b07fd]">createNewAppointment</td> 
+  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:02</td>   <td>40745</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createApptSameTime()[pri:5, instance:clo.LoginPage@192b07fd]">createApptSameTime</td> 
+  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:10</td>   <td>48890</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.updateAppointment()[pri:6, instance:clo.LoginPage@192b07fd]">updateAppointment</td> 
+  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:16</td>   <td>55068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteAppointment()[pri:7, instance:clo.LoginPage@192b07fd]">deleteAppointment</td> 
+  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:17</td>   <td>56242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageSent()[pri:8, instance:clo.LoginPage@192b07fd]">newMessageSent</td> 
+  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:22</td>   <td>60784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageReply()[pri:9, instance:clo.LoginPage@192b07fd]">newMessageReply</td> 
+  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:26</td>   <td>65076</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteMessage()[pri:10, instance:clo.LoginPage@192b07fd]">deleteMessage</td> 
+  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:28</td>   <td>67358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.checksReadyToPrint()[pri:11, instance:clo.LoginPage@192b07fd]">checksReadyToPrint</td> 
+  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:33</td>   <td>72165</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.checksRegister()[pri:12, instance:clo.LoginPage@192b07fd]">checksRegister</td> 
+  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:39</td>   <td>77745</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.voidCheck()[pri:13, instance:clo.LoginPage@192b07fd]">voidCheck</td> 
+  <td>main@846238611</td>   <td></td> </tr>
 </table>
