--- a/test-output/old/Suite1/methods.html
+++ b/test-output/old/Suite1/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aaf0a4">  <td>19/04/09 10:13:39</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;AddaNewReturn.login(java.lang.String)[pri:0, instance:clo.AddaNewReturn@1d296da]">&gt;&gt;login</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@428566321</td>   <td></td> </tr>
-<tr bgcolor="aaf0a4">  <td>19/04/09 10:13:51</td>   <td>11504</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddaNewReturn.addareturn()[pri:1, instance:clo.AddaNewReturn@1d296da]">addareturn</td> 
-  <td>main@428566321</td>   <td></td> </tr>
-<tr bgcolor="aaf0a4">  <td>19/04/09 10:13:52</td>   <td>12590</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddaNewReturn.teardown()[pri:0, instance:clo.AddaNewReturn@1d296da]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@428566321</td>   <td></td> </tr>
-<tr bgcolor="aaf0a4">  <td>19/04/09 10:13:55</td>   <td>15326</td> <td>&nbsp;</td><td title="&gt;&gt;AddaNewReturn.login(java.lang.String)[pri:0, instance:clo.AddaNewReturn@3fc2959f]">&gt;&gt;login</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@428566321</td>   <td></td> </tr>
-<tr bgcolor="aaf0a4">  <td>19/04/09 10:14:03</td>   <td>24128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddaNewReturn.addareturn()[pri:1, instance:clo.AddaNewReturn@3fc2959f]">addareturn</td> 
-  <td>main@428566321</td>   <td></td> </tr>
+<tr bgcolor="98978d">  <td>19/05/15 13:18:56</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;AddaNewReturn.login(java.lang.String)[pri:0, instance:clo.AddaNewReturn@3c41ed1d]">&gt;&gt;login</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@914356853</td>   <td></td> </tr>
+<tr bgcolor="98978d">  <td>19/05/15 13:19:08</td>   <td>11650</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddaNewReturn.addareturn()[pri:1, instance:clo.AddaNewReturn@3c41ed1d]">addareturn</td> 
+  <td>main@914356853</td>   <td></td> </tr>
+<tr bgcolor="98978d">  <td>19/05/15 13:19:18</td>   <td>22587</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddaNewReturn.teardown()[pri:0, instance:clo.AddaNewReturn@3c41ed1d]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@914356853</td>   <td></td> </tr>
+<tr bgcolor="98978d">  <td>19/05/15 13:19:19</td>   <td>22944</td> <td>&nbsp;</td><td title="&gt;&gt;AddaNewReturn.login(java.lang.String)[pri:0, instance:clo.AddaNewReturn@77c2494c]">&gt;&gt;login</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@914356853</td>   <td></td> </tr>
+<tr bgcolor="98978d">  <td>19/05/15 13:19:29</td>   <td>32729</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddaNewReturn.addareturn()[pri:1, instance:clo.AddaNewReturn@77c2494c]">addareturn</td> 
+  <td>main@914356853</td>   <td></td> </tr>
 </table>
