--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd7b6a">  <td>19/05/06 13:33:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createApptSameTime()[pri:5, instance:clo.LoginPage@192b07fd]">createApptSameTime</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/06 13:33:07</td>   <td>-8469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createNewAppointment()[pri:4, instance:clo.LoginPage@192b07fd]">createNewAppointment</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/06 13:33:30</td>   <td>14527</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteAppointment()[pri:7, instance:clo.LoginPage@192b07fd]">deleteAppointment</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/06 13:33:40</td>   <td>24165</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteMessage()[pri:10, instance:clo.LoginPage@192b07fd]">deleteMessage</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/06 13:32:53</td>   <td>-22671</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginPositive()[pri:3, instance:clo.LoginPage@192b07fd]">loginPositive</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/06 13:33:36</td>   <td>20272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageReply()[pri:9, instance:clo.LoginPage@192b07fd]">newMessageReply</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/06 13:33:31</td>   <td>15707</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageSent()[pri:8, instance:clo.LoginPage@192b07fd]">newMessageSent</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/06 13:33:24</td>   <td>8292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.updateAppointment()[pri:6, instance:clo.LoginPage@192b07fd]">updateAppointment</td> 
-  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/05/06 14:33:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createApptSameTime()[pri:5, instance:clo.LoginPage@64bf3bbf]">createApptSameTime</td> 
+  <td>main@1241276575</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/05/06 14:33:30</td>   <td>-9254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createNewAppointment()[pri:4, instance:clo.LoginPage@64bf3bbf]">createNewAppointment</td> 
+  <td>main@1241276575</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/05/06 14:33:56</td>   <td>16586</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteAppointment()[pri:7, instance:clo.LoginPage@64bf3bbf]">deleteAppointment</td> 
+  <td>main@1241276575</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/05/06 14:34:07</td>   <td>27810</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteMessage()[pri:10, instance:clo.LoginPage@64bf3bbf]">deleteMessage</td> 
+  <td>main@1241276575</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/05/06 14:33:12</td>   <td>-27062</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginPositive()[pri:3, instance:clo.LoginPage@64bf3bbf]">loginPositive</td> 
+  <td>main@1241276575</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/05/06 14:34:02</td>   <td>23539</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageReply()[pri:9, instance:clo.LoginPage@64bf3bbf]">newMessageReply</td> 
+  <td>main@1241276575</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/05/06 14:33:57</td>   <td>17896</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageSent()[pri:8, instance:clo.LoginPage@64bf3bbf]">newMessageSent</td> 
+  <td>main@1241276575</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/05/06 14:33:48</td>   <td>9471</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.updateAppointment()[pri:6, instance:clo.LoginPage@64bf3bbf]">updateAppointment</td> 
+  <td>main@1241276575</td>   <td></td> </tr>
 </table>
