--- a/test-output/old/Suite2/methods.html
+++ b/test-output/old/Suite2/methods.html
@@ -1,6 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite2</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd7b6a">  <td>19/04/08 11:15:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginNegative()[pri:0, instance:clo.LoginPage@20322d26]">loginNegative</td> 
-  <td>main@503195940</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/05/15 13:22:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginPositive()[pri:3, instance:clo.LoginPage@64bf3bbf]">loginPositive</td> 
+  <td>main@1241276575</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/05/15 13:23:02</td>   <td>16821</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createNewAppointment()[pri:4, instance:clo.LoginPage@64bf3bbf]">createNewAppointment</td> 
+  <td>main@1241276575</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/05/15 13:23:21</td>   <td>36514</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createApptSameTime()[pri:5, instance:clo.LoginPage@64bf3bbf]">createApptSameTime</td> 
+  <td>main@1241276575</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/05/15 13:23:29</td>   <td>44628</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.updateAppointment()[pri:6, instance:clo.LoginPage@64bf3bbf]">updateAppointment</td> 
+  <td>main@1241276575</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/05/15 13:23:37</td>   <td>51728</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteAppointment()[pri:7, instance:clo.LoginPage@64bf3bbf]">deleteAppointment</td> 
+  <td>main@1241276575</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/05/15 13:23:43</td>   <td>57798</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageSent()[pri:8, instance:clo.LoginPage@64bf3bbf]">newMessageSent</td> 
+  <td>main@1241276575</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/05/15 13:23:50</td>   <td>64961</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageReply()[pri:9, instance:clo.LoginPage@64bf3bbf]">newMessageReply</td> 
+  <td>main@1241276575</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/05/15 13:23:58</td>   <td>73090</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteMessage()[pri:10, instance:clo.LoginPage@64bf3bbf]">deleteMessage</td> 
+  <td>main@1241276575</td>   <td></td> </tr>
 </table>
