--- a/reports/testExecutionReport.html
+++ b/reports/testExecutionReport.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2019-04-09 10:13:54</span>
+					<span class='suite-started-time'>2019-07-02 11:58:38</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 12s+105ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 52s+672ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 12s+105ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 52s+672ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2019-04-09 10:13:42</span> 
+							<span class='panel-lead suite-started-time'>2019-07-02 11:57:46</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2019-04-09 10:13:54</span> 
+							<span class='panel-lead suite-ended-time'>2019-07-02 11:58:38</span> 
 						</div> 
 					</div>
 				</div>
@@ -168,19 +168,19 @@
 								<tbody>
 										<tr>
 											<td>User Name</td>
-											<td>ssreenivasan</td>
+											<td>nmenon</td>
 										</tr>
 										<tr>
 											<td>OS</td>
-											<td>Windows Server 2012</td>
+											<td>Windows 10</td>
 										</tr>
 										<tr>
 											<td>Java Version</td>
-											<td>1.8.0_171</td>
+											<td>1.8.0_181</td>
 										</tr>
 										<tr>
 											<td>Host Name</td>
-											<td>qaint</td>
+											<td>coyote</td>
 										</tr>
 								</tbody>
 							</table>
@@ -237,7 +237,7 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='a676eea0-1d57-4f15-9e52-60bf4ec112a4'>
+										<li class='collection-item test displayed active pass ' extentid='4ce398ee-7358-46b9-8f69-fda06b9f2ead'>
 											<div class='test-head'>
 												<span class='test-name'>Adding a New Tax Return </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -245,9 +245,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-04-09 10:13:43</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-04-09 10:13:54</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 11s+635ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-07-02 11:57:46</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-07-02 11:58:38</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 52s+654ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -264,18 +264,88 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>10:13:44</td>
+																	<td class='timestamp'>11:57:47</td>
 																	<td class='step-details'>Browser Maximized</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>10:13:51</td>
-																	<td class='step-details'>Clicked Offices</td>
+																	<td class='timestamp'>11:58:02</td>
+																	<td class='step-details'>New city added</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>10:13:52</td>
-																	<td class='step-details'>New Tax Return created</td>
+																	<td class='timestamp'>11:58:04</td>
+																	<td class='step-details'>City Edited Sucessfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>11:58:08</td>
+																	<td class='step-details'>New Employer added Successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>11:58:12</td>
+																	<td class='step-details'>New Employer Editted Successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>11:58:15</td>
+																	<td class='step-details'>New Care provider added successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>11:58:18</td>
+																	<td class='step-details'>Care provider editted successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>11:58:19</td>
+																	<td class='step-details'>Refferrals added successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>11:58:21</td>
+																	<td class='step-details'>Refferrals editted successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>11:58:24</td>
+																	<td class='step-details'>Donee added successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>11:58:26</td>
+																	<td class='step-details'>Donee editted successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>11:58:28</td>
+																	<td class='step-details'>Bank RTN added successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>11:58:30</td>
+																	<td class='step-details'>Bank RTN editted successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>11:58:32</td>
+																	<td class='step-details'>New Occupation added successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>11:58:33</td>
+																	<td class='step-details'>Occupation  editted successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>11:58:36</td>
+																	<td class='step-details'>New Educational Institution  added  successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>11:58:38</td>
+																	<td class='step-details'>Educational Institution editted  successfully</td>
 																</tr>
 														</tbody>
 													</table>
