--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,32 +1,38 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd7b6a">  <td>19/05/15 13:26:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginNegative()[pri:1, instance:clo.LoginPage@192b07fd]">loginNegative</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/15 13:26:51</td>   <td>12305</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.forgotPassword()[pri:2, instance:clo.LoginPage@192b07fd]">forgotPassword</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:02</td>   <td>22897</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginPositive()[pri:3, instance:clo.LoginPage@192b07fd]">loginPositive</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:14</td>   <td>35268</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createNewAppointment()[pri:4, instance:clo.LoginPage@192b07fd]">createNewAppointment</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:22</td>   <td>43349</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createApptSameTime()[pri:5, instance:clo.LoginPage@192b07fd]">createApptSameTime</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:31</td>   <td>51789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.updateAppointment()[pri:6, instance:clo.LoginPage@192b07fd]">updateAppointment</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:37</td>   <td>57983</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteAppointment()[pri:7, instance:clo.LoginPage@192b07fd]">deleteAppointment</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:38</td>   <td>59159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteSecondAppointment()[pri:7, instance:clo.LoginPage@192b07fd]">deleteSecondAppointment</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:38</td>   <td>59223</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageSent()[pri:8, instance:clo.LoginPage@192b07fd]">newMessageSent</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:43</td>   <td>63795</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageReply()[pri:9, instance:clo.LoginPage@192b07fd]">newMessageReply</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:47</td>   <td>67616</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteMessage()[pri:10, instance:clo.LoginPage@192b07fd]">deleteMessage</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:49</td>   <td>69906</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.checksReadyToPrint()[pri:11, instance:clo.LoginPage@192b07fd]">checksReadyToPrint</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:54</td>   <td>74689</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.checksRegister()[pri:12, instance:clo.LoginPage@192b07fd]">checksRegister</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/15 13:27:59</td>   <td>80306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.voidCheck()[pri:13, instance:clo.LoginPage@192b07fd]">voidCheck</td> 
-  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:53:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbAddCity()[pri:22, instance:clo.DatabaseSettings@3c46e67a]">dbAddCity</td> 
+  <td>main@978508707</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:53:34</td>   <td>22695</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbEditCity()[pri:23, instance:clo.DatabaseSettings@3c46e67a]">dbEditCity</td> 
+  <td>main@978508707</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:53:36</td>   <td>24659</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddEmployer()[pri:25, instance:clo.DatabaseSettings@3c46e67a]">dbaddEmployer</td> 
+  <td>main@978508707</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:53:40</td>   <td>29025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditEmployer()[pri:26, instance:clo.DatabaseSettings@3c46e67a]">dbeditEmployer</td> 
+  <td>main@978508707</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:53:44</td>   <td>32407</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddCareProvider()[pri:28, instance:clo.DatabaseSettings@3c46e67a]">dbaddCareProvider</td> 
+  <td>main@978508707</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:53:47</td>   <td>35881</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditCareProvider()[pri:29, instance:clo.DatabaseSettings@3c46e67a]">dbeditCareProvider</td> 
+  <td>main@978508707</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:53:49</td>   <td>38293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddReferrals()[pri:31, instance:clo.DatabaseSettings@3c46e67a]">dbaddReferrals</td> 
+  <td>main@978508707</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:53:51</td>   <td>39882</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditReferrals()[pri:32, instance:clo.DatabaseSettings@3c46e67a]">dbeditReferrals</td> 
+  <td>main@978508707</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:53:53</td>   <td>41502</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddDonee()[pri:34, instance:clo.DatabaseSettings@3c46e67a]">dbaddDonee</td> 
+  <td>main@978508707</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:53:55</td>   <td>44252</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditDonee()[pri:35, instance:clo.DatabaseSettings@3c46e67a]">dbeditDonee</td> 
+  <td>main@978508707</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:53:58</td>   <td>46852</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddBankRTN()[pri:37, instance:clo.DatabaseSettings@3c46e67a]">dbaddBankRTN</td> 
+  <td>main@978508707</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:54:00</td>   <td>48601</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditBankRTN()[pri:38, instance:clo.DatabaseSettings@3c46e67a]">dbeditBankRTN</td> 
+  <td>main@978508707</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:54:01</td>   <td>50218</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddOccupations()[pri:40, instance:clo.DatabaseSettings@3c46e67a]">dbaddOccupations</td> 
+  <td>main@978508707</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:54:03</td>   <td>52079</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditOccupations()[pri:41, instance:clo.DatabaseSettings@3c46e67a]">dbeditOccupations</td> 
+  <td>main@978508707</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:54:05</td>   <td>53804</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddEducationalInstitute()[pri:43, instance:clo.DatabaseSettings@3c46e67a]">dbaddEducationalInstitute</td> 
+  <td>main@978508707</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:54:08</td>   <td>56583</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditEducationalInstitute()[pri:44, instance:clo.DatabaseSettings@3c46e67a]">dbeditEducationalInstitute</td> 
+  <td>main@978508707</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:54:10</td>   <td>58390</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DatabaseSettings.teardown()[pri:0, instance:clo.DatabaseSettings@3c46e67a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@978508707</td>   <td></td> </tr>
 </table>
