--- a/test-output/old/Suite2/methods-alphabetical.html
+++ b/test-output/old/Suite2/methods-alphabetical.html
@@ -1,30 +1,84 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite2</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.checksReadyToPrint()[pri:11, instance:clo.LoginPage@192b07fd]">checksReadyToPrint</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:33</td>   <td>4807</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.checksRegister()[pri:12, instance:clo.LoginPage@192b07fd]">checksRegister</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:02</td>   <td>-26613</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createApptSameTime()[pri:5, instance:clo.LoginPage@192b07fd]">createApptSameTime</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:50:54</td>   <td>-34716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createNewAppointment()[pri:4, instance:clo.LoginPage@192b07fd]">createNewAppointment</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:16</td>   <td>-12290</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteAppointment()[pri:7, instance:clo.LoginPage@192b07fd]">deleteAppointment</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:26</td>   <td>-2282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteMessage()[pri:10, instance:clo.LoginPage@192b07fd]">deleteMessage</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:50:31</td>   <td>-57464</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.forgotPassword()[pri:2, instance:clo.LoginPage@192b07fd]">forgotPassword</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:50:21</td>   <td>-67358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginNegative()[pri:1, instance:clo.LoginPage@192b07fd]">loginNegative</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:50:40</td>   <td>-47872</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginPositive()[pri:3, instance:clo.LoginPage@192b07fd]">loginPositive</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:22</td>   <td>-6574</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageReply()[pri:9, instance:clo.LoginPage@192b07fd]">newMessageReply</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:17</td>   <td>-11116</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageSent()[pri:8, instance:clo.LoginPage@192b07fd]">newMessageSent</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:10</td>   <td>-18468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.updateAppointment()[pri:6, instance:clo.LoginPage@192b07fd]">updateAppointment</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:39</td>   <td>10387</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.voidCheck()[pri:13, instance:clo.LoginPage@192b07fd]">voidCheck</td> 
-  <td>main@846238611</td>   <td></td> </tr>
+<tr bgcolor="be83e4">  <td>19/07/02 11:57:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsChanges.captureSignature()[pri:20, instance:clo.SettingsChanges@292b08d6]">captureSignature</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="be83e4">  <td>19/07/02 11:57:20</td>   <td>-14025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsChanges.changePassword()[pri:16, instance:clo.SettingsChanges@292b08d6]">changePassword</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="be83e4">  <td>19/07/02 11:57:24</td>   <td>-10123</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsChanges.changePasswordCancel()[pri:17, instance:clo.SettingsChanges@292b08d6]">changePasswordCancel</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:56:37</td>   <td>-56940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.checksReadyToPrint()[pri:12, instance:clo.LoginPage@206a70ef]">checksReadyToPrint</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:56:42</td>   <td>-52081</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.checksRegister()[pri:13, instance:clo.LoginPage@206a70ef]">checksRegister</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:56:08</td>   <td>-85877</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createApptSameTime()[pri:5, instance:clo.LoginPage@206a70ef]">createApptSameTime</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:55:51</td>   <td>-102817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createNewAppointment()[pri:4, instance:clo.LoginPage@206a70ef]">createNewAppointment</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/07/02 11:57:43</td>   <td>9147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbAddCity()[pri:22, instance:clo.DatabaseSettings@22555ebf]">dbAddCity</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/07/02 11:58:02</td>   <td>28085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbEditCity()[pri:23, instance:clo.DatabaseSettings@22555ebf]">dbEditCity</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/07/02 11:58:26</td>   <td>52311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddBankRTN()[pri:37, instance:clo.DatabaseSettings@22555ebf]">dbaddBankRTN</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/07/02 11:58:12</td>   <td>37776</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddCareProvider()[pri:28, instance:clo.DatabaseSettings@22555ebf]">dbaddCareProvider</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/07/02 11:58:21</td>   <td>47033</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddDonee()[pri:34, instance:clo.DatabaseSettings@22555ebf]">dbaddDonee</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/07/02 11:58:33</td>   <td>59352</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddEducationalInstitute()[pri:43, instance:clo.DatabaseSettings@22555ebf]">dbaddEducationalInstitute</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/07/02 11:58:04</td>   <td>30029</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddEmployer()[pri:25, instance:clo.DatabaseSettings@22555ebf]">dbaddEmployer</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/07/02 11:58:30</td>   <td>55716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddOccupations()[pri:40, instance:clo.DatabaseSettings@22555ebf]">dbaddOccupations</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/07/02 11:58:18</td>   <td>43745</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddReferrals()[pri:31, instance:clo.DatabaseSettings@22555ebf]">dbaddReferrals</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/07/02 11:58:28</td>   <td>54066</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditBankRTN()[pri:38, instance:clo.DatabaseSettings@22555ebf]">dbeditBankRTN</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/07/02 11:58:15</td>   <td>41246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditCareProvider()[pri:29, instance:clo.DatabaseSettings@22555ebf]">dbeditCareProvider</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/07/02 11:58:24</td>   <td>49736</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditDonee()[pri:35, instance:clo.DatabaseSettings@22555ebf]">dbeditDonee</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/07/02 11:58:36</td>   <td>62183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditEducationalInstitute()[pri:44, instance:clo.DatabaseSettings@22555ebf]">dbeditEducationalInstitute</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/07/02 11:58:08</td>   <td>34419</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditEmployer()[pri:26, instance:clo.DatabaseSettings@22555ebf]">dbeditEmployer</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/07/02 11:58:32</td>   <td>57626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditOccupations()[pri:41, instance:clo.DatabaseSettings@22555ebf]">dbeditOccupations</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/07/02 11:58:19</td>   <td>45401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditReferrals()[pri:32, instance:clo.DatabaseSettings@22555ebf]">dbeditReferrals</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:56:23</td>   <td>-71074</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteAppointment()[pri:7, instance:clo.LoginPage@206a70ef]">deleteAppointment</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:56:35</td>   <td>-59245</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteMessage()[pri:11, instance:clo.LoginPage@206a70ef]">deleteMessage</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:56:24</td>   <td>-69899</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteSecondAppointment()[pri:8, instance:clo.LoginPage@206a70ef]">deleteSecondAppointment</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:55:20</td>   <td>-133524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.forgotPassword()[pri:2, instance:clo.LoginPage@206a70ef]">forgotPassword</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:55:07</td>   <td>-146550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginNegative()[pri:1, instance:clo.LoginPage@206a70ef]">loginNegative</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:55:36</td>   <td>-118394</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginPositive()[pri:3, instance:clo.LoginPage@206a70ef]">loginPositive</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="be83e4">  <td>19/07/02 11:57:41</td>   <td>6615</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsChanges.loginSettings()[pri:21, instance:clo.SettingsChanges@292b08d6]">loginSettings</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:56:31</td>   <td>-63059</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageReply()[pri:10, instance:clo.LoginPage@206a70ef]">newMessageReply</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:56:26</td>   <td>-67737</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageSent()[pri:9, instance:clo.LoginPage@206a70ef]">newMessageSent</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="be83e4">  <td>19/07/02 11:56:52</td>   <td>-42196</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsChanges.switchYear()[pri:15, instance:clo.SettingsChanges@292b08d6]">switchYear</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:56:49</td>   <td>-44551</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPage.teardown()[pri:0, instance:clo.LoginPage@206a70ef]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="be83e4">  <td>19/07/02 11:57:43</td>   <td>8991</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SettingsChanges.teardown()[pri:0, instance:clo.SettingsChanges@292b08d6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/07/02 11:58:38</td>   <td>64047</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DatabaseSettings.teardown()[pri:0, instance:clo.DatabaseSettings@22555ebf]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="be83e4">  <td>19/07/02 11:57:28</td>   <td>-6325</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsChanges.toggleTrainingMode()[pri:18, instance:clo.SettingsChanges@292b08d6]">toggleTrainingMode</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="be83e4">  <td>19/07/02 11:57:31</td>   <td>-3173</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsChanges.toggleTrainingModeOff()[pri:19, instance:clo.SettingsChanges@292b08d6]">toggleTrainingModeOff</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:56:17</td>   <td>-77280</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.updateAppointment()[pri:6, instance:clo.LoginPage@206a70ef]">updateAppointment</td> 
+  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/07/02 11:56:48</td>   <td>-46448</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.voidCheck()[pri:14, instance:clo.LoginPage@206a70ef]">voidCheck</td> 
+  <td>main@188523822</td>   <td></td> </tr>
 </table>
